--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/img/favicon.svg" />
-    <title>Shivam - Portfolio</title>
+    <title>Supertuna - Portfolio</title>
 
     <!-- Font Awesome icons -->
     <script
@@ -54,7 +54,7 @@
         <div>
           <div>
             <h4 title="Hello, How are you?">Hi, There!</h4>
-            <h2 class="hero-section__title">I'm <span>Shivam</span></h2>
+            <h2 class="hero-section__title">I'm <span>Supertuna</span></h2>
             <p class="hero-section__desc">
               I am a Web Developer skilled in Frontend Technologies, such as
               HTML, CSS, and JavaScript, creating interactive web experiences.
@@ -105,14 +105,14 @@
         </div>
 
         <div class="hero-img">
-          <img src="assets/img/Shivam.jpg" alt="Shivam-portfolio" width="350" />
+          <img src="assets/img/profile.png" alt="Supertuna-portfolio" width="350" />
         </div>
       </section>
 
       <!-- About Section  -->
       <section class="about-section" id="about">
         <div class="about-img">
-          <img src="assets/img/Shivam.jpg" alt="Shivam-portfolio" />
+          <img src="assets/img/Supertuna.jpg" alt="Supertuna-portfolio" />
         </div>
 
         <div class="about-content">
@@ -131,7 +131,7 @@
           </p>
 
           <button class="btn btn-primary">
-            <a href="https://github.com/shivamnishad14" target="_blank">
+            <a href="https://github.com/Supertunanishad14" target="_blank">
               Know More <i class="fa-solid fa-arrow-right-to-bracket"></i>
             </a>
           </button>
@@ -243,7 +243,7 @@
         </form>
         <div class="contact__github">
           <button class="btn">
-            <a href="https://github.com/shivamnishad14" target="_blank">
+            <a href="https://github.com/Supertunanishad14" target="_blank">
               <i class="fa-brands fa-github"></i> Github
             </a>
           </button>
@@ -254,7 +254,7 @@
     <footer>
       <p>
         Copyright &copy; 2025 -
-        <a href="https://github.com/shivamnishad14" target="_blank">Shivam</a> -
+        <a href="https://github.com/Supertunanishad14" target="_blank">Supertuna</a> -
         All Rights Reserved.
       </p>
       <div class="footer-buttons">
