--- a/newsAppImg.html
+++ b/newsAppImg.html
@@ -69,7 +69,7 @@
             (news) => `
           <a href=${news.url}>
            <div class="news-box">
-              <img src=${news.urlToImage || "assets/img/Shivam.jpg"} alt="" srcset="" />
+              <img src=${news.urlToImage || "assets/img/Supertuna.jpg"} alt="" srcset="" />
               <p class="title">${news.title.slice(0,30)}...</p>
               <p class="description">${news.description || "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, quasi?"}</p>
               <p class="auther">${news.author} | ${news.publishedAt}</p>
