--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <!-- About Section  -->
       <section class="about-section" id="about">
         <div class="about-img">
-          <img src="assets/img/Supertuna.jpg" alt="Supertuna-portfolio" />
+          <img src="assets/img/profile.png" alt="Supertuna-portfolio" />
         </div>
 
         <div class="about-content">
